# ignis

./: CMakeLists.txt
demos/: test.cpp
demos/assets/: VC2.glb  test.glb
private/: allocated.cpp  bloom.cpp  bufferBuilder.cpp  builder.cpp  camera.cpp  descriptorSet.cpp  descriptorSetBuilder.cpp  engine.cpp  gltf.cpp  image.cpp  log.cpp  pipelineBuilder.cpp  resourceScope.cpp  uniform.cpp  uniformBuilder.cpp
public/: allocated.hpp  bloom.hpp  bufferBuilder.hpp  builder.hpp  camera.hpp  common.hpp  descriptorSet.hpp  descriptorSetBuilder.hpp  engine.hpp  gltf.hpp  image.hpp  libraries.hpp  log.hpp  pipelineBuilder.hpp  resourceScope.hpp  uniform.hpp  uniformBuilder.hpp
shaders/: bloom.frag  fullscreen.vert  gltf.frag  gltf.vert  gltf_backup.frag  gltf_backup.vert  light.frag  pbr.glsl  postProcessing.frag  shader.frag  shader.vert
